feat: exercicio Fundo e Bordas / Margem, padding, largura e altura / Fontes / Transparências

--- a/index.html
+++ b/index.html
@@ -57,6 +57,21 @@
 
                     </details>
 
+                    <details class="collapse">
+                        <summary class="title">Exercicio 3</summary>
+                        <div class="description">
+                            <a href="pages/div-centralizer.html">Div-centralizer</a>
+                            <br>
+                            <a href="pages/image.html">image</a>
+                            <br>
+                            <a href="pages/random-page.html">RandomPage</a>
+                            <br>
+                            <a href="pages/shoes-page.html">Shoes Pages</a>
+                            <br>
+                        </div>
+
+                    </details>
+
 
                 </div>
             </details>
