starwars nested fetch

--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
 
                     </details>
 
+                    <details class="collapse">
+                        <summary class="title">Exercicio 4</summary>
+                        <div class="description">
+                            <a href="pages/starwarsapi.html">StarWarsApi - nested fetch</a>
+                            <br>
+                        </div>
+
+                    </details>
+
 
                 </div>
             </details>
